<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebe9d7"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@color/charcoal_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:gravity="center"
        android:text="@string/welcome_subtext"
        android:textColor="@color/charcoal_grey"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/charcoal_grey"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="8dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/txtSubtext"
        app:layout_constraintStart_toStartOf="@id/txtSubtext"
        app:layout_constraintTop_toBottomOf="@id/txtSubtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/icon_padlock"
        android:backgroundTint="@color/charcoal_grey"
        android:drawablePadding="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/text_password"
        app:layout_constraintEnd_toEndOf="@id/txtSubtext"
        app:layout_constraintStart_toStartOf="@id/txtSubtext"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/background_button"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/txtSubtext"
        app:layout_constraintStart_toStartOf="@id/txtSubtext"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>